--- a/Studybuddy/composer.json
+++ b/Studybuddy/composer.json
@@ -7,10 +7,12 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "illuminate/mail": "^10.37",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "nesbot/carbon": "^2.71"
+        "nesbot/carbon": "^2.71",
+        "rap2hpoutre/laravel-log-viewer": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
